2008-07-15  jverzani  <verzani@csilaptop.Belkin>

	* R/gvarbrowser.R: update() method extended to gvarbrowser

	* R/gtoolbar.R: fixed expand=TRUE in adding toolbar group to
	container. This can be passed in via ... if desired.

	* R/gradio.R (as.gWidgetsRGtk2.GtkRadioButton): fixed error with
	enable<-. Needed to map to all buttons.

	* R/gpanedgroup.R (as.gWidgetsRGtk2.GtkHPaned <-
	as.gWidgetsRGtk2.GtkVPaned): typo in svalue<-

2008-05-19  jverzani  <verzani@csilaptop.Belkin>

	* NAMESPACE: added addHandlerChanged eg. to fix errors with
	R-devel check

2008-05-17  jverzani  <verzani@csilaptop.Belkin>

	* R/gcheckboxgroup.R: used obj inplace of x in leftbracket
	def. Made [<- method work to replace values if called
	obj[]<-newitems.
	
	

2008-05-03  jverzani  <verzani@csilaptop.Belkin>

	* DESCRIPTION (Depends): put cairoDevice from extends to suggests

	* man/gWidgetsRGtk2-undocumented.Rd: documentation errors

2008-05-02  jverzani  <verzani@csilaptop.Belkin>

	* R/gedit.R: fixed bug in windows with completion. Not all
	completion properties are available here.

2008-04-23  jverzani  <verzani@csilaptop.Belkin>

	* R/gdialogs.R: added parent argument to dialogs

2008-04-19  jverzani  <verzani@csilaptop.Belkin>

	* R/ggroup.R (as.gWidgetsRGtk2.GtkVBox <-
	as.gWidgetsRGtk2.GtkHBox): added anchor arugment to ggroup

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): getBlock, not getWidget
	for alignment

2008-04-13  jverzani  <verzani@csilaptop.Belkin>

	* R/gradio.R: fixed handler to call only select part of toggled.
	(as.gWidgetsRGtk2.GtkRadioButton): fixed up gradio to be able to
	use as.gWidgetsRGtk2

2008-04-12  jverzani  <verzani@csilaptop.Belkin>

	* R/aaaGenerics.R: added blockHandler, unblockHandler to API as in
	between of add remove

2008-04-06  jverzani  <verzani@csilaptop.Belkin>

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): removed the visible()<-
	requirement of the old glayout. Now lays ou dynamically

2008-04-01  jverzani  <verzani@csilaptop.Belkin>
