@@ -1,13 +1,14 @@
 Package: gWidgetsRGtk2
-Version: 0.0-36
+Version: 0.0-37
 Title: Toolkit implementation of gWidgets for RGtk2
 Author: Michael Lawrence, John Verzani
 Maintainer: John Verzani <gwidgetsrgtk@gmail.com>
-Depends: methods, RGtk2, gWidgets(>= 0.0.27), 
+Depends: methods, gWidgets(>= 0.0.27), 
+Imports: RGtk2
 Suggests: cairoDevice (>= 2.3.0)  
 Extends: 
 Description: Port of gWidgets API to RGtk2
 License: GPL (>= 2)
 URL: http://www.math.csi.cuny.edu/pmg
 LazyLoad: yes
-Packaged: Fri Jul 18 14:48:23 2008; verzani
+Packaged: Wed Aug  6 10:21:13 2008; verzani
